loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:6: error: illegal start of simple expression
	}
        ^