loopfor.LoopStairs.scala.code
while (!estFaceMur) avance;
gauche ;

while(!estFaceMur)